# LuxCoreDeps

./: CMakeLists.txt  README.md  TODO.txt  conanfile.py  debug.sh  deps.yml  install-conan.sh  pyproject.toml  run-conan.sh
.github/workflows/: build.yml  check.yml  deps.yml  monitor.yml  release.yml
conan-local-recipes-arm64/recipes/embree/all/: conandata.yml  conanfile.py
conan-local-recipes/recipes/embree/all/: conandata.yml  conanfile.py
conan-local-recipes/recipes/imguifiledialog/all/: conanfile.py
conan-local-recipes/recipes/nvrtc/: config.yml
conan-local-recipes/recipes/nvrtc/binary/: conandata.yml
conan-local-recipes/recipes/oidn/: config.yml
conan-profiles/: compatibility.py  conan-profile-Linux-X64  conan-profile-Windows-ARM64  conan-profile-Windows-X64  conan-profile-common  conan-profile-macOS-ARM64  conan-profile-macOS-X64  conan-profile-windows-arm64-clang  conanfile.py  fix_size_t.h  macos-vars-ARM64.cmake  macos-vars-X64.cmake  macos_var.cmake  windows-vars-ARM64.cmake  windows_var.cmake
local-conan-recipes/blender-types/: conanfile.py
local-conan-recipes/fmt/: conanfile.py
local-conan-recipes/imgui-filebrowser/: conanfile.py
local-conan-recipes/imguifiledialog/: conanfile.py
local-conan-recipes/nativefiledialog/: conanfile.py
local-conan-recipes/nvrtc/: conanfile.py
local-conan-recipes/oidn/: conanfile.py
local-conan-recipes/opensubdiv/: conanfile.py
scripts/: install_conan.sh
utils/: clean-conan-files.sh  debug.sh  get-build-info.py  local-CI-build.sh  plain-local-build.sh
(+2 files in other folders)
