# SPDX-FileCopyrightText: 2024 Howetuft
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "dummy"
version = "3.14"
description = "Dummy target"

[tool.scikit-build]
logging.level = "DEBUG"
build.verbose = true
cmake.source-dir = "."
build.targets = ["dummy"]
wheel.cmake = true
build-dir = "build"
